--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,7 @@
   "short_name": "RSE DevTool",
   "version": "0.1.0",
   "devtools_page": "devtools.html",
-  "content_security_policy": "script-src 'self' 'sha256-aACyqpZ0J54ETqZ2Ey5EXA0hUYkB/4vJpgqiWczxL/o='; object-src 'self'",
+  "content_security_policy": "script-src 'self' 'sha256-Oq8dW/DkoFtmi8Thwn09vHhPhzrja8w7JpBxqCqwUEM='; object-src 'self'",
   "content_scripts": [
     {
       "matches": [
@@ -28,5 +28,8 @@
       },
       "description": "not sure"
     }
-  }
+  },
+  "permissions": [
+    "activeTab"
+  ]
 }
