--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,13 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "react-state-event devtool",
   "short_name": "RSE DevTool",
   "version": "0.1.0",
   "devtools_page": "devtools.html",
-  "content_security_policy": "script-src 'self' 'sha256-oUd9FmFP9+t0dULXa97X+wUfPDH1UsQUuZAMj25j0cc='; object-src 'self'",
+  "content_security_policy": {
+    "script-src": "self",
+    "object-src": "self"
+  },
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
@@ -19,9 +22,10 @@
     }
   ],
   "background": {
-    "scripts": ["background.js"]
+    "service_worker": "background.js"
   },
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "storage"
   ]
 }
